--- a/whatsasena/Dockerfile
+++ b/whatsasena/Dockerfile
@@ -1,6 +1,6 @@
 FROM fusuf/whatsasena:latest
 
-RUN git clone https://github.com/Sew01RaviduManoj01KingAndQueen/QueenSewSL /root/QueenSewSL
+RUN git clone https://Sew01RaviduManoj01KingAndQueen:queensew1@github.com/Sew01RaviduManoj01KingAndQueen/QueenSewSL /root/QueenSewSL
 WORKDIR /root/QueenSewSL/
 ENV TZ=Europe/Istanbul
 RUN npm install supervisor -g
